--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,4 +1,7 @@
 @import 'primeicons/primeicons.css';
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
 
 /*
   1. Use a more-intuitive box-sizing model.
@@ -29,6 +32,7 @@ body {
     background-color 0.5s;
   line-height: 1.6;
   font-family:
+    Inter var,
     Inter,
     -apple-system,
     BlinkMacSystemFont,
@@ -41,7 +45,7 @@ body {
     'Droid Sans',
     'Helvetica Neue',
     sans-serif;
-  font-size: 15px;
+  font-size: 1rem;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
