--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -30,10 +30,10 @@ body {
   transition:
     color 0.5s,
     background-color 0.5s;
-  line-height: 1.6;
+  line-height: 1.5;
   font-family:
-    Inter var,
-    Inter,
+    'Inter var',
+    'Inter',
     -apple-system,
     BlinkMacSystemFont,
     'Segoe UI',
@@ -49,6 +49,11 @@ body {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+
+  --main-color: #fff;
+
+  background-color: #34343d;
 }
 
 /*
