--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -46,8 +46,6 @@ body {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-
-
 }
 
 /*
@@ -60,6 +58,8 @@ canvas,
 svg {
   display: block;
   max-width: 100%;
+  border-top-left-radius: var(--card-border-radius);
+  border-top-right-radius: var(--card-border-radius);
 }
 
 /*
@@ -75,7 +75,6 @@ select {
 /*
   7. Avoid text overflows
 */
-p,
 h1,
 h2,
 h3,
@@ -84,6 +83,10 @@ h5,
 h6 {
   overflow-wrap: break-word;
   font-weight: bold;
+}
+
+p {
+  overflow-wrap: break-word;
 }
 
 /*
@@ -119,7 +122,7 @@ h6 {
 ==========================================================================
 */
 
-/* Layout */
+/* LAYOUT */
 
 .card,
 .wrapper,
@@ -143,37 +146,83 @@ footer,
   flex-direction: column;
 }
 
-.wrapper {
+.wrapper,
+header {
   gap: 2rem;
-  margin-bottom: 2.5rem;
 }
 
 .card,
 .wrapper,
 .subscribe-block,
-.header,
+header,
 footer {
   padding: var(--page-padding);
+}
+
+.card,
+nav {
+  gap: 1rem;
+}
+
+.paragraph,
+h3,
+h2 {
+  text-align: center;
+}
+
+/* setting both <img> and its parents width to 100% allows the image to fill the entire container */
+.header,
+.image,
+footer,
+header,
+img {
+  width: 100%;
+}
+
+.header {
+  justify-content: space-between;
+}
+
+nav {
+  display: inline-flex;
+}
+
+/* MODULES */
+
+.interactions,
+input {
+  border: 0.0625rem solid var(--card-background);
+  border-radius: var(--card-border-radius);
+  background-color: var(--card-background);
+  outline-color: transparent;
+  max-width: 100%;
+
+  &:hover,
+  &:focus,
+  &:active {
+    outline: none;
+  }
+}
+
+a,
+.button {
+  transition: all .15s linear;
+}
+
+.title,
+nav {
+  text-transform: uppercase;
+}
+
+.title {
+  font-weight: bold;
+  border-bottom: none;
 }
 
 .card {
   border: var(--border);
   background-color: var(--card-background);
   border-radius: var(--card-border-radius);
-  gap: 1rem;
-}
-
-header,
-.header {
-  margin-bottom: .8rem;
-  justify-content: space-between;
-  margin-top: .5rem;
-}
-
-.title {
-  text-transform: uppercase;
-  font-weight: bold;
-  border-bottom: none;
 }
 
 .button {
@@ -203,37 +252,18 @@ header,
   font-size: 0.75rem;
 }
 
-.interactions,
-input {
-  border: 0.0625rem solid var(--card-background);
-  border-radius: var(--card-border-radius);
-  background-color: var(--card-background);
-  outline-color: transparent;
-  max-width: 100%;
-
-  &:hover,
-  &:focus,
-  &:active {
-    outline: none;
-  }
-}
-
 .interactions {
   padding-top: .375rem;
   padding-bottom: .375rem;
   padding-left: .75rem;
   padding-right: .375rem;
+  margin-bottom: 1rem;
 
   &:hover,
   &:focus,
   &:active {
     border: 1px solid var(--emerald);
   }
-}
-
-a,
-.button {
-  transition: all .15s linear;
 }
 
 a {
@@ -248,99 +278,61 @@ a {
   }
 }
 
-nav {
-  display: inline-flex;
-  gap: 0.8rem;
-  text-transform: uppercase;
-}
-
-h3,
-.paragraph,
-h2 {
-  text-align: center;
-}
-
-footer,
-.header {
-  width: 100%;
-}
-
 footer {
   background-color: #282931;
   gap: 1.5rem;
 }
 
+/* 
+==========================================================================
+   MEDIA QUERIES
+==========================================================================
+*/
+
+/*  320px ---> 767px */
 @media only screen and (min-width: 20rem) and (max-width: 47.9375rem) {
 
   .card,
   .wrapper,
-  .header {
+  header {
     padding: var(--mobile-padding);
   }
 
-  body,
-  .button,
-  nav {
+  body {
     font-size: .875rem;
-    line-height: 140%;
   }
 
   h1 {
-    font-size: 1.4rem;
+    font-size: 1.5rem;
   }
 
   h2 {
-    font-size: .9375rem;
+    font-size: 1.125rem;
   }
 }
 
-@media only screen and (min-width: 47.9375rem) and (max-width: 63.9375rem) {
-
-  .card {
-    padding: 2rem;
-    margin-bottom: calc(4rem - 2rem);
-  }
-
-  nav {
-    font-size: 1rem;
-    gap: 1rem;
-  }
+/*  768px ---> 1023px */
+@media only screen and (min-width: 48rem) and (max-width: 63.9375rem) {
 
   h1 {
-    font-size: 1.6rem;
+    font-size: 1.5rem;
   }
 
   h2 {
-    font-size: 1.3rem;
+    font-size: 1.2em;
   }
 
   h3 {
-    font-size: 1.2rem;
+    font-size: 1.1rem;
   }
-
 }
 
+/*  1024px ---> 1439px */
 @media only screen and (min-width: 64rem) and (max-width: 89.9375rem) {
 
-  .card {
-    padding: 2rem;
-    margin-bottom: calc(4.5rem - 2rem);
-  }
-
-  .interactions {
-    justify-content: space-between;
-    width: 50%;
-  }
-
   .wrapper,
-  .header,
-  h2 {
+  header {
     padding-inline: 8rem;
-  }
-
-  nav {
-    font-size: 1rem;
-    gap: 1rem;
   }
 
   h1 {
@@ -352,55 +344,27 @@ footer {
   }
 
   h3 {
-    font-size: 1.2rem;
-  }
-
-  input {
-    padding-left: .75rem;
+    font-size: 1.2em;
   }
 }
 
+/*  1440px ---> 2560px */
 @media only screen and (min-width: 90rem) and (max-width: 160rem) {
 
-  .card {
-    padding: 2rem;
-    margin-bottom: calc(5rem - 2rem);
-  }
-
-  .interactions {
-    justify-content: space-between;
-    width: 36%;
-  }
-
-  .card {
-    width: 66rem;
-  }
-
   .wrapper,
-  .header,
-  h2 {
+  header {
     padding-inline: 12rem;
   }
 
-  nav {
-    gap: 1rem;
-  }
-
   h1 {
-    font-size: 2.2rem;
+    font-size: 2rem;
   }
 
   h2 {
     font-size: 1.6rem;
-    width: 80%;
-    margin: auto;
   }
 
   h3 {
     font-size: 1.4rem;
-  }
-
-  input {
-    padding-left: .95rem;
   }
 }
