Attempt to fix strange behavior of h2 on subscribe component

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -352,6 +352,9 @@ footer {
 
   h2 {
     font-size: 1.125rem;
+
+    /* setting here fixed width due to the weird bug in the mobile version on real devices */
+    width: 6.25rem;
   }
 }
 
