--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -309,7 +309,7 @@ a {
 
 ul li {
   margin-bottom: .5rem;
-  padding: 1rem;
+  padding-block: 1rem;
 }
 
 
@@ -410,7 +410,7 @@ the right */
   }
 
   .wrapper {
-    padding-inline: 12rem;
+    padding-inline: 30rem;
   }
 
   .card,
